--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon --exec babel-node --presets @babel/preset-env",
     "test": "./node_modules/.bin/mocha --require @babel/register --exit"
   },
-  "author": "",
+  "author": "Tivere IDORO",
   "license": "ISC",
   "dependencies": {
     "bull": "^3.16.0",
